# grask

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IDEA.md  LICENSE  README.md  SECURITY.md  llms.txt  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bad_question.yml  bug_report.yml  config.yml
.github/workflows/: ci.yml  release.yml
docs/: README.md  design.md
docs/demo/: driver.py  record.sh  seed_demo.py
docs/design/: 2026-07-21-ask-answer-grade-design.md  2026-07-21-capture-pipeline-design.md  2026-07-21-triage-intent-classifier-design.md  2026-07-22-claude-slash-command-delivery-design.md  2026-07-22-multiple-choice-probes-design.md  grill-design.md
docs/plans/: 2026-07-20-triage-moment-selection.md  2026-07-21-ask-answer-grade.md  2026-07-21-capture-pipeline.md  2026-07-22-claude-slash-command-delivery.md  2026-07-22-multiple-choice-probes.md
docs/skill/: SKILL.md
hooks/: hooks.json
skills/grask/: SKILL.md
src/grask/: SKILL.md  __init__.py  ask.py  capture.py  capture_run.py  cli.py  dialogue.py  hook.py  install.py  llm.py  probe.py  seed.py  select.py  storage.py  survey.py  transcript.py  triage.py  triage_run.py
src/grill/: __init__.py  ask.py  capture.py  capture_run.py  cli.py  dialogue.py  hook.py  llm.py  probe.py  seed.py  select.py  storage.py  survey.py  transcript.py  triage.py  triage_run.py
tests/: conftest.py  test_ask.py  test_capture.py  test_capture_run.py  test_capture_smoke.py  test_cli.py  test_dialogue.py  test_hook.py  test_install.py  test_plugin.py  test_probe.py  test_seed.py  test_select.py  test_serve_record.py  test_storage.py  test_transcript.py  test_triage.py
